RESOLVED FIXED214770
Fix assertion when highlighting in detached frames and make loads complete
https://bugs.webkit.org/show_bug.cgi?id=214770
Summary Fix assertion when highlighting in detached frames and make loads complete
Alex Christensen
Reported 2020-07-24 16:43:58 PDT
Fix assertion when highlighting in detached frames and make loads complete
Attachments
Patch (4.42 KB, patch)
2020-07-24 16:47 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2020-07-24 16:47:23 PDT
Geoffrey Garen
Comment 2 2020-07-24 17:26:02 PDT
Comment on attachment 405203 [details] Patch r=me
EWS
Comment 3 2020-07-24 19:59:09 PDT
Committed r264878: <https://trac.webkit.org/changeset/264878> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405203 [details].
Radar WebKit Bug Importer
Comment 4 2020-07-24 20:00:38 PDT
Note You need to log in before you can comment on or make changes to this bug.