Fix assertion when highlighting in detached frames and make loads complete https://bugs.webkit.org/show_bug.cgi?id=214770

Patch by Alex Christensen <achristensen@webkit.org> on 2020-07-24
Reviewed by Geoffrey Garen.

Source/WebCore:

There's an assertion added in r53218 I think should be an early return.
It can be triggered by an interesting test I found while looking into rdar://problem/65467702
I also needed to balance the call to incrementLoadEventDelayCount in an early return in order to get the test to finish loading.

Test: fast/editing/frame-selection-is-not-caret.html

* editing/FrameSelection.cpp:
(WebCore::FrameSelection::caretBlinkTimerFired):
* loader/SubframeLoader.cpp:
(WebCore::FrameLoader::SubframeLoader::loadSubframe):

LayoutTests:

* fast/editing/frame-selection-is-not-caret-expected.txt: Added.
* fast/editing/frame-selection-is-not-caret.html: Added.

Canonical link: https://commits.webkit.org/227601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264878 268f45cc-cd09-0410-ab3c-d52691b4dbfc